VIH-11149 add a smoke test to run in prod
Confirming booking is successful in booking journey
Remove the email body from console log
Update sign out action to confirm sign out step
do not attempt to remove hearings generated from UI test if the environment is production, Prod APIs are not accessible
Include the Pexip Sip Address Stem in the config to help build join url

--- a/variables/shared.yaml
+++ b/variables/shared.yaml
@@ -28,6 +28,8 @@ variables:
     value: $(ConferencePhoneNumber)
   - name: SystemConfiguration.EnvironmentConfigSettings.PexipNodeAddress
     value: $(VodafonePexipNode)
+  - name: SystemConfiguration.EnvironmentConfigSettings.PexipSipAddressStem
+    value: $(SipAddressStemVodafone)
   - name: SystemConfiguration.EnvironmentConfigSettings.AdminUrl
     value: ${{ variables.adminWebUrl }}
   - name: SystemConfiguration.EnvironmentConfigSettings.VideoUrl
