add default PexipSipAddressStem to app setting to allow transformations in build

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -15,6 +15,7 @@
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "PexipNodeAddress": "",
+      "PexipSipAddressStem": "",
       "SoapApiUrl": "",
       "DefaultElementWait": 60,
       "PipelineElementWait": 30,
