restore run test step

--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -92,7 +92,7 @@ steps:
       azureSubscription: '${{ parameters.subscriptionName }}'
       KeyVaultName: 'vh-notification-api-${{ lower(parameters.environment) }}'
       SecretsFilter: 'notifyconfiguration--apikey'
-      
+
   - bash: |
       echo "##vso[task.setvariable variable=ApiClientConfiguration.NotifyApiKey;issecret=false]$(notifyconfiguration--apikey)"
     displayName: Change Notification API client secrets to variables
@@ -169,27 +169,27 @@ steps:
     displayName: Add NuGet Feed Authentication
     workingDirectory: $(Build.SourcesDirectory)
 
-  # - task: DotNetCoreCLI@2
-  #   displayName: Run UI Tests
-  #   inputs:
-  #     command: test
-  #     projects: '${{ parameters.projectpath }}/*.csproj'
-  #     publishTestResults: true
-  #     testRunTitle: '${{ parameters.testRunTitle }}'
-  #     ${{ if eq(parameters.testCategory, '') }}:
-  #       arguments: '--configuration Release'
-  #     ${{ else }}:
-  #       arguments: '--configuration Release --filter TestCategory=${{ parameters.testCategory }}'
+  - task: DotNetCoreCLI@2
+    displayName: Run UI Tests
+    inputs:
+      command: test
+      projects: '${{ parameters.projectpath }}/*.csproj'
+      publishTestResults: true
+      testRunTitle: '${{ parameters.testRunTitle }}'
+      ${{ if eq(parameters.testCategory, '') }}:
+        arguments: '--configuration Release'
+      ${{ else }}:
+        arguments: '--configuration Release --filter TestCategory=${{ parameters.testCategory }}'
 
-  # - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master')}}:
-  #   - template: ./get-results-from-trx.yaml
-  #     parameters:
-  #       name: ${{ parameters.slackTestReportName }}
+  - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master')}}:
+      - template: ./get-results-from-trx.yaml
+        parameters:
+          name: ${{ parameters.slackTestReportName }}
 
-  #   - template: ./send-results-to-slack.yaml
-  #     parameters:
-  #       env: ${{ parameters.environment }}
-  #       results: $(testOutcome)
-  #       details: $(testSummary)
-  #       triggerID: $(triggerID)
-  #       type: ${{ parameters.slackTitle }}
+      - template: ./send-results-to-slack.yaml
+        parameters:
+          env: ${{ parameters.environment }}
+          results: $(testOutcome)
+          details: $(testSummary)
+          triggerID: $(triggerID)
+          type: ${{ parameters.slackTitle }}
