--- a/azure-pipelines.sds.daily.stg.yml
+++ b/azure-pipelines.sds.daily.stg.yml
@@ -2,7 +2,7 @@ trigger: none
 pr: none
 
 schedules:
-  - cron: '0 7 * * 1,2,3,4,5'
+  - cron: '0 8 * * 1,2,3,4,5'
     displayName: Daily build
     always: true
     branches:
@@ -23,7 +23,7 @@ pool:
 jobs:
   - template: pipelines/templates/pipeline.yaml
     parameters:
-      environment: 'Prod'
+      environment: 'Stg'
       runUITests: true
       runA11yTests: false
       runOnSaucelabs: true
