added condition to ignore cleanup of hearings, with appsetting, defaulting to true, shared.yaml sets to false if stg or prod

--- a/UI.AutomationTests/appsettings.json
+++ b/UI.AutomationTests/appsettings.json
@@ -25,6 +25,7 @@
       "RunOnSauceLabs": false,
       "RunHeadlessBrowser": false,
       "EnableAccessibilityCheck": false,
+      "CleanUpData": true,
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
